--- a/index.html
+++ b/index.html
@@ -9,24 +9,27 @@
 </head>
 <body>
     <header>
-        <nav>
-            <img src="./images/logo.svg" alt="Logo">
+        <nav class="nav-menu">
+            <a href="./index.html"><img src="./images/logo.svg" alt="Logo"></a>
             <ul>
-                <li> <a href="./index.html">Студия</a> </li>
-                <li> <a href="./portfolio.html">Портфолио</a></li>
-                <li> <a href="">Контакты</a></li>
+                <li> <a href="./index.html"><span>Студия</span></a> </li>
+                <li> <a href="./portfolio.html"><span>Портфолио</span></a></li>
+                <li> <a href=""><span>Контакты</span></a></li>
             </ul>
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <div class="contacts">
+            <a href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
+            <a href="tel:+380961111111"><span>+38 096 111 11 11</span></a>
+        </div>
     </header>
     
     <main>
-        <section>
+        <section class="hero">
             <h1>Эффективные решения<br>для вашего бизнеса</h1>
-            <a href="">Заказать услугу</a>
+            <button type="button" class="button-order-service">Заказать услугу</button>
+            <!--<a href="">Заказать услугу</a>-->
         </section>
-        <section>
+        <section class="our-advantages">
            <!--<h2>Преимущества</h2>--> 
             <ul>
                 <li><h3>Внимание к деталям</h3><p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p></li>
@@ -35,7 +38,7 @@
                 <li><h3>Современные технологии</h3><p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p></li>
             </ul>
         </section>
-        <section>
+        <section class="what-we-do">
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li><img src="./images/whatwedo1.jpg" alt="Написание кода" width="370"></li>
@@ -43,7 +46,7 @@
                 <li><img src="./images/whatwedo3.jpg" alt="Работа стилусом на планшете" width="370"></li>
             </ul>
         </section>
-        <section>
+        <section class="our-team"> 
             <h2>Наша команда</h2>
             <ul>
                 <li>
@@ -69,13 +72,13 @@
             </ul>
         </section>
     </main>
-    <footer>
-        <img src="./images/logo.svg" alt="Logo">
+    <footer class="footer">
+         <a href="./index.html"><img src="./images/logo-white.svg" alt="Logo"></a>
         
-        <address>
-            <p>г. Киев, пр-т Леси Украинки, 26</p>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <address class="footer-contacts">
+            <a href=""><p>г. Киев, пр-т Леси Украинки, 26</p></a>
+            <a href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
+            <a href="tel:+380961111111"><span>+38 096 111 11 11</span></a>
         </address>
 
     </footer>
