--- a/index.html
+++ b/index.html
@@ -1,86 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <title>Cтудия</title>
+    <title>Studio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
 </head>
 <body>
+    <!--Верхняя линия -->
     <header>
-        <nav class="nav-menu">
-            <a href="./index.html"><img src="./images/logo.svg" alt="Logo"></a>
-            <ul>
-                <li> <a href="./index.html"><span>Студия</span></a> </li>
-                <li> <a href="./portfolio.html"><span>Портфолио</span></a></li>
-                <li> <a href=""><span>Контакты</span></a></li>
+        <nav class="site-nav">
+            <a class="logo" href="./index.html"><span>Web</span>Studio</a>
+            <ul class="navigation">
+                <li><a class="link-current" href="./index.html">Студия</a></li>
+                <li><a class="link" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="link" href="">Контакты</a></li>
             </ul>
         </nav>
-        <div class="contacts">
-            <a href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
-            <a href="tel:+380961111111"><span>+38 096 111 11 11</span></a>
-        </div>
+        <a class="address" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="address" href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
-    
-    <main>
+   <main>
+        <!--Шапка-->
         <section class="hero">
-            <h1>Эффективные решения<br>для вашего бизнеса</h1>
+            <h1>Эффективные решения <br/> для вашего бизнеса</h1>
             <button type="button" class="button-order-service">Заказать услугу</button>
-            <!--<a href="">Заказать услугу</a>-->
         </section>
-        <section class="our-advantages">
-           <!--<h2>Преимущества</h2>--> 
-            <ul>
-                <li><h3>Внимание к деталям</h3><p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p></li>
-                <li><h3>Пунктуальность</h3><p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p></li>
-                <li><h3>Планирование</h3><p>Равным образом консультация с широким активом в значительной степени обуславливает.</p></li>
-                <li><h3>Современные технологии</h3><p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p></li>
+        <!--Особенности-->
+        <section class="features">
+            <h2 class="hidden-title">Особенности</h2>
+            <ul  class="features-list">
+                <li><h3 class="features-title">Внимание к деталям</h3><p class="features-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p></li>
+                <li><h3 class="features-title">Пунктуальность</h3><p class="features-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p></li>
+                <li><h3 class="features-title">Планирование</h3><p class="features-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p></li>
+                <li><h3 class="features-title">Современные технологии</h3><p class="features-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p></li>
             </ul>
         </section>
-        <section class="what-we-do">
-            <h2>Чем мы занимаемся</h2>
-            <ul>
-                <li><img src="./images/whatwedo1.jpg" alt="Написание кода" width="370"></li>
-                <li><img src="./images/whatwedo2.jpg" alt="Синхронизация с телефоном" width="370"></li>
-                <li><img src="./images/whatwedo3.jpg" alt="Работа стилусом на планшете" width="370"></li>
+        <!--Занятие-->
+        <section class="works">
+            <h2 class="works-header">Чем мы занимаемся</h2>
+            <ul class="works-list">
+                <li class="works-list-item"><img src="./images/whatwedo1.jpg" alt="Написание кода" width="370"></li>
+                <li class="works-list-item"><img src="./images/whatwedo2.jpg" alt="Синхронизация с телефоном" width="370"></li>
+                <li class="works-list-item"><img src="./images/whatwedo3.jpg" alt="Работа стилусом на планшете" width="370"></li>
             </ul>
         </section>
-        <section class="our-team"> 
-            <h2>Наша команда</h2>
-            <ul>
-                <li>
+        <!--Команда-->
+        <section class="team">
+            <h2 class="team-header">Наша команда</h2>
+            <ul class="team-list">
+                <li class="team-member">
                     <img src="./images/memberteam1.jpg" alt="Фото члена команды" width="270">
-                    <h3>Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
+                    <h3 class="member-name">Игорь Демьяненко</h3>
+                    <p class="member-position">Product Designer</p>
                 </li>
-                <li>
+                <li class="team-member">
                     <img src="./images/memberteam2.jpg" alt="Фото члена команды" width="270">
-                    <h3>Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                    <h3  class="member-name">Ольга Репина</h3>
+                    <p class="member-position">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-member">
                     <img src="./images/memberteam3.jpg" alt="Фото члена команды" width="270">
-                    <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <h3  class="member-name">Николай Тарасов</h3>
+                    <p class="member-position">Marketing</p>
                 </li>
-                <li>
+                <li class="team-member"> 
                     <img src="./images/memberteam4.jpg" alt="Фото члена команды" width="270">
-                    <h3>Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                    <h3  class="member-name">Михаил Ермаков</h3>
+                    <p class="member-position">UI Designer</p>
                 </li>
             </ul>
         </section>
-    </main>
-    <footer class="footer">
-         <a href="./index.html"><img src="./images/logo-white.svg" alt="Logo"></a>
-        
-        <address class="footer-contacts">
-            <a href=""><p>г. Киев, пр-т Леси Украинки, 26</p></a>
-            <a href="mailto:info@devstudio.com"><span>info@devstudio.com</span></a>
-            <a href="tel:+380961111111"><span>+38 096 111 11 11</span></a>
-        </address>
-
-    </footer>
+   </main>
+   <!--Подвал-->
+<footer class="footer">
+    <a class="logo" href="./index.html"><span>Web</span>Studio</a>
+    <address class="footer-addr">
+        <p class="footer-street">г. Киев, пр-т Леси Украинки, 26</p>
+        <a class="address" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="address" href="tel:+380961111111">+38 096 111 11 11</a>
+    </address>
+</footer>
 </body>
 </html>
